--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^7.2.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.1",
     "sass": "^1.75.0"
   },
   "devDependencies": {
