--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "i18next": "^23.11.3",
     "i18next-browser-languagedetector": "^7.2.1",
-    "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
